Added active effects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gradient Button</title>
+  <title>Global location Pointer</title>
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
           <p>IN URDU</p>
         </div>
       </button>
-      <button type="button" class="location-box" data-location-id="5">
+      <button type="button" class="location-box active" data-location-id="5">
         <div class="location-box-content">
           <div class="location-box-header">
             <div class="location-box-header-wrapper">
